--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,26 @@
 //= components/head.html
 
 <body>
-    //= components/header.html
+    <!-- //= components/header.html -->
+
+    <div class="main-banner uk-container">
+        <div class="main-banner__container">
+            <ul class="swiper-wrapper">
+                <li class="swiper-slide">
+                    <p>Лучшая цена на iPhone 11 Pro и Pro Max</p>
+                    <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
+                    <a href="#" class="btn">Подробнее</a>
+                </li>
+                <li class="swiper-slide">
+                    <p>Slide - 2</p>
+                    <a href="#" class="btn">Подробнее</a>
+                </li>
+            </ul>
+        </div>
+        <!-- Add Arrows -->
+        <div class="main-banner__button main-banner__button--next uk-visible@l"></div>
+        <div class="main-banner__button main-banner__button--prev uk-visible@l"></div>
+    </div>
+    //= components/footer.html
 </body>
 //= components/bottom.html
