--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body>
-    <!-- //= components/header.html -->
+    //= components/header.html
 
     <div class="main-banner uk-container">
         <div class="main-banner__container">
