--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,212 @@
         <div class="main-banner__button main-banner__button--prev uk-visible@l"></div>
     </div>
 
+    <!-- Product-cards -->
+    <div class="uk-container bg-full-width">
+        <ul class="uk-grid-small uk-child-width-1-4" uk-grid>
+            <li>
+                <div class="product-card product-card--default uk-flex uk-flex-column">
+                    <a href="#" class="product-card__image">
+                        <img src="img/temp/product-card-1.jpg" alt="">
+                    </a>
+                    <span class="product-card__title">iPhone Xr 128GB Blue</span>
+                    <div class="product-card__footer">
+                        <div class="uk-flex">
+                            <div class="product__price">
+                                <div class="uk-flex">
+                                    <span class="product-card__price-old">99990&nbsp;&#8381;</span>
+                                    <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
+                                </div>
+                                <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
+                            </div>
+                            <a href="#" class="btn">В корзину</a>
+                        </div>
+                        <div class="product-card__footer-bottom uk-flex uk-flex-between">
+                            <a href="#">Подробнее</a>
+                            <span>Купить в 1 клик</span>
+                        </div>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-card product-card--default uk-flex uk-flex-column">
+                    <a href="#" class="product-card__image">
+                        <img src="img/temp/product-card-2.jpg" alt="">
+                    </a>
+                    <span class="product-card__title">iPhone Xr 128GB Blue</span>
+                    <div class="product-card__footer">
+                        <div class="uk-flex">
+                            <div class="product__price">
+                                <div class="uk-flex">
+                                    <span class="product-card__price-old">99990&nbsp;&#8381;</span>
+                                    <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
+                                </div>
+                                <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
+                            </div>
+                            <a href="#" class="btn">В корзину</a>
+                        </div>
+                        <div class="product-card__footer-bottom uk-flex uk-flex-between">
+                            <a href="#">Подробнее</a>
+                            <span>Купить в 1 клик</span>
+                        </div>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-card product-card--default uk-flex uk-flex-column">
+                    <a href="#" class="product-card__image">
+                        <img src="img/temp/product-card-3.jpg" alt="">
+                    </a>
+                    <span class="product-card__title">iPhone Xr 128GB Blue</span>
+                    <div class="product-card__footer">
+                        <div class="uk-flex">
+                            <div class="product__price">
+                                <div class="uk-flex">
+                                    <span class="product-card__price-old">99990&nbsp;&#8381;</span>
+                                    <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
+                                </div>
+                                <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
+                            </div>
+                            <a href="#" class="btn">В корзину</a>
+                        </div>
+                        <div class="product-card__footer-bottom uk-flex uk-flex-between">
+                            <a href="#">Подробнее</a>
+                            <span>Купить в 1 клик</span>
+                        </div>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-card product-card--default uk-flex uk-flex-column">
+                    <a href="#" class="product-card__image">
+                        <img src="img/temp/product-card-4.jpg" alt="">
+                    </a>
+                    <span class="product-card__title">iPhone Xr 128GB Blue</span>
+                    <div class="product-card__footer">
+                        <div class="uk-flex">
+                            <div class="product__price">
+                                <div class="uk-flex">
+                                    <span class="product-card__price-old">99990&nbsp;&#8381;</span>
+                                    <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
+                                </div>
+                                <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
+                            </div>
+                            <a href="#" class="btn">В корзину</a>
+                        </div>
+                        <div class="product-card__footer-bottom uk-flex uk-flex-between">
+                            <a href="#">Подробнее</a>
+                            <span>Купить в 1 клик</span>
+                        </div>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-card product-card--default uk-flex uk-flex-column">
+                    <a href="#" class="product-card__image">
+                        <img src="img/temp/product-card-5.jpg" alt="">
+                    </a>
+                    <span class="product-card__title">iPhone Xr 128GB Blue</span>
+                    <div class="product-card__footer">
+                        <div class="uk-flex">
+                            <div class="product__price">
+                                <div class="uk-flex">
+                                    <span class="product-card__price-old">99990&nbsp;&#8381;</span>
+                                    <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
+                                </div>
+                                <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
+                            </div>
+                            <a href="#" class="btn">В корзину</a>
+                        </div>
+                        <div class="product-card__footer-bottom uk-flex uk-flex-between">
+                            <a href="#">Подробнее</a>
+                            <span>Купить в 1 клик</span>
+                        </div>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-card product-card--default uk-flex uk-flex-column">
+                    <a href="#" class="product-card__image">
+                        <img src="img/temp/product-card-6.jpg" alt="">
+                    </a>
+                    <span class="product-card__title">iPhone Xr 128GB Blue</span>
+                    <div class="product-card__footer">
+                        <div class="uk-flex">
+                            <div class="product__price">
+                                <div class="uk-flex">
+                                    <span class="product-card__price-old">99990&nbsp;&#8381;</span>
+                                    <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
+                                </div>
+                                <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
+                            </div>
+                            <a href="#" class="btn">В корзину</a>
+                        </div>
+                        <div class="product-card__footer-bottom uk-flex uk-flex-between">
+                            <a href="#">Подробнее</a>
+                            <span>Купить в 1 клик</span>
+                        </div>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-card product-card--default uk-flex uk-flex-column">
+                    <a href="#" class="product-card__image">
+                        <img src="img/temp/product-card-7.jpg" alt="">
+                    </a>
+                    <span class="product-card__title">iPhone Xr 128GB Blue</span>
+                    <div class="product-card__footer">
+                        <div class="uk-flex">
+                            <div class="product__price">
+                                <div class="uk-flex">
+                                    <span class="product-card__price-old">99990&nbsp;&#8381;</span>
+                                    <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
+                                </div>
+                                <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
+                            </div>
+                            <a href="#" class="btn">В корзину</a>
+                        </div>
+                        <div class="product-card__footer-bottom uk-flex uk-flex-between">
+                            <a href="#">Подробнее</a>
+                            <span>Купить в 1 клик</span>
+                        </div>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-card product-card--default uk-flex uk-flex-column">
+                    <a href="#" class="product-card__image">
+                        <img src="img/temp/product-card-8.jpg" alt="">
+                    </a>
+                    <span class="product-card__title">iPhone Xr 128GB Blue</span>
+                    <div class="product-card__footer">
+                        <div class="uk-flex">
+                            <div class="product__price">
+                                <div class="uk-flex">
+                                    <span class="product-card__price-old">99990&nbsp;&#8381;</span>
+                                    <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
+                                </div>
+                                <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
+                            </div>
+                            <a href="#" class="btn">В корзину</a>
+                        </div>
+                        <div class="product-card__footer-bottom uk-flex uk-flex-between">
+                            <a href="#">Подробнее</a>
+                            <span>Купить в 1 клик</span>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+
     <!-- Banners -->
     <div
         class="uk-container uk-child-width-1-2@s uk-flex uk-flex-column@x bg-full-width uk-padding-large-top@l uk-padding-large-top@s">
