feature: adds features

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 //= components/head.html
 
 <body>
-    //= components/header.html
+    <!-- //= components/header.html -->
+
     <!-- Slider top -->
     <div class="main-banner uk-container bg-full-width--gradient">
         <div class="main-banner__container">
@@ -493,6 +494,62 @@
                 </div>
             </li>
         </ul>
+    </div>
+
+    <!-- Main-features -->
+    <div
+        class="main-features uk-padding-large-top@l uk-padding-large-top@s uk-padding-large-bottom@l uk-padding-large-bottom@s">
+        <div class="uk-container uk-overflow-hidden">
+            <h2 class="title title--small uk-margin-bottom">Наши преимущества:</h2>
+            <!-- Add Pagination -->
+            <div class="swiper-pagination uk-margin-small-bottom"></div>
+            <div class="main-features__container">
+                <ul class="swiper-wrapper uk-flex uk-flex-between uk-child-width-1-4"
+                    uk-height-match="target: li > div">
+                    <li class="swiper-slide">
+                        <div>
+                            <img src="img/pic/bg/main-features-1.jpg" alt="">
+                            <span>Бесплатная доставка</span>
+                            <p>За 3 часа до двери в пределах МКАД. Оплачиваете товар курьеру при получении.</p>
+                            <a href="#">Подробнее</a>
+                        </div>
+                    </li>
+
+                    <li class="swiper-slide">
+                        <div>
+                            <img src="img/pic/bg/main-features-2.jpg" alt="">
+                            <span>Все способы оплаты</span>
+                            <p>Банковской картой, наличными, безналичными (без НДС), электронные кошельки. Кредит.
+                                Курьеру
+                                или в
+                                точке выдачи.</p>
+                            <a href="#">Подробнее</a>
+                        </div>
+                    </li>
+
+                    <li class="swiper-slide">
+                        <div>
+                            <img src="img/pic/bg/main-features-3.jpg" alt="">
+                            <span>Кредит онлайн</span>
+                            <p>Без посещения банка и очередей. Онлайн-анкета по телефону. 5 минут на все оформление.
+                                Сотрудничаем с
+                                12 банками.</p>
+                            <a href="#">Подробнее</a>
+                        </div>
+                    </li>
+
+                    <li class="swiper-slide">
+                        <div>
+                            <img src="img/pic/bg/main-features-4.jpg" alt="">
+                            <span>Гарантия</span>
+                            <p>365 дней гарантии на каждое приобретенное устройство. Обмен и возврат в течении 14 дней.
+                            </p>
+                            <a href="#">Подробнее</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     //= components/footer.html
