feature: adds subscribe

--- a/src/index.html
+++ b/src/index.html
@@ -378,7 +378,7 @@
     </div>
 
     <!-- Product-cards Accessories -->
-    <div class="uk-container bg-full-width uk-padding-large-top@l uk-padding-large-top@s">
+    <div class="uk-container bg-full-width uk-padding-large-top@l uk-padding-large-top@s uk-padding-large-bottom@l uk-padding-large-bottom@s">
         <div class="uk-flex uk-flex-between uk-flex-middle uk-margin-bottom">
             <h2 class="title title--small">Аксессуары</h2>
             <a href="#" class="link-see-all">
@@ -552,6 +552,7 @@
         </div>
     </div>
 
+    //= components/subscribe.html
     //= components/footer.html
 </body>
 //= components/bottom.html
