feature: adds mobile version

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -34,8 +34,8 @@
           <li>
             <!-- Swiper -->
             <div class="contacts__swiper-container">
-              <ul class="swiper-wrapper" uk-toggle="target: > .swiper-slide; cls: active">
-                <li class="swiper-slide">
+              <ul class="swiper-wrapper">
+                <li class="swiper-slide active">
                   <div class="contacts__info uk-flex uk-flex-column">
                     <span class="contacts__info-title">Савеловская</span>
                     <span class="contacts__info-address">Сущевский Вал 5 с 6,</span>
@@ -99,8 +99,6 @@
                     <span class="contacts__info-time">Время работы: <br>Сб-Вс 10:00-18:00, Пн-Пт 10:00-20:00</span>
                   </div>
                 </li>
-                <li class="swiper-slide">Slide 9</li>
-                <li class="swiper-slide">Slide 10</li>
               </ul>
               <!-- Add Scrollbar -->
               <div class="swiper-scrollbar"></div>
@@ -110,6 +108,12 @@
             <iframe class="contacts__map"
               src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d53787.65773638526!2d30.337858222679674!3d59.93387135736224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1562672617310!5m2!1sru!2sru"
               width="750" height="470" style="border:0" allowfullscreen></iframe>
+            <div class="contacts__info contacts__info--on-map uk-flex uk-flex-column">
+              <span class="contacts__info-title">Кузьминки</span>
+              <span class="contacts__info-address">ул. Зеленодельская 121/35,</span>
+              <span class="contacts__info-phone">0987654321</span>
+              <span class="contacts__info-time">Время работы: <br>Сб-Вс 10:00-18:00, Пн-Пт 10:00-20:00</span>
+            </div>
           </li>
         </ul>
       </div>
