--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,17 @@
     <div class="main-banner uk-container bg-full-width--gradient">
         <div class="main-banner__container">
             <ul class="swiper-wrapper">
-                <li class="swiper-slide">
+                <li class="swiper-slide slide-1">
                     <p>Лучшая цена на iPhone 11 Pro и Pro Max</p>
                     <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
                     <a href="#" class="btn">Подробнее</a>
                 </li>
-                <li class="swiper-slide">
+                <li class="swiper-slide slide-2">
                     <p>Slide - 2</p>
+                    <a href="#" class="btn">Подробнее</a>
+                </li>
+                <li class="swiper-slide slide-3">
+                    <p>Slide - 3</p>
                     <a href="#" class="btn">Подробнее</a>
                 </li>
             </ul>
@@ -244,7 +248,7 @@
         class="uk-container uk-child-width-1-2@s uk-flex uk-flex-column@x bg-full-width uk-padding-large-top@l uk-padding-large-top@s">
         <!-- banner-1 -->
         <div class="banner banner--pink">
-            <img src="img/pic/ico/banner-pink-title.svg" width="173" height="28" alt="">
+            <img src="img/pic/ico/banner-pink-title.png" width="173" height="28" alt="">
             <p>В наличии и по лучшей цене</p>
             <a href="#">В каталог</a>
             <img src="img/pic/bg/banner-pink-mobile.jpg" alt="">
@@ -378,7 +382,8 @@
     </div>
 
     <!-- Product-cards Accessories -->
-    <div class="uk-container bg-full-width uk-padding-large-top@l uk-padding-large-top@s uk-padding-large-bottom@l uk-padding-large-bottom@s">
+    <div
+        class="uk-container bg-full-width uk-padding-large-top@l uk-padding-large-top@s uk-padding-large-bottom@l uk-padding-large-bottom@s">
         <div class="uk-flex uk-flex-between uk-flex-middle uk-margin-bottom">
             <h2 class="title title--small">Аксессуары</h2>
             <a href="#" class="link-see-all">
