feature: adds page reviews

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="contacts">
-  <div class="contacts__container uk-container bg-full-width">
+  <div class="contacts__wrapper uk-container bg-full-width">
     <div class="frame">
       <ul class="breadcrumbs uk-subnav uk-subnav-divider">
         <li><a href="#">Главная</a></li>
