--- a/src/reviews.html
+++ b/src/reviews.html
@@ -84,38 +84,32 @@
                 жалуется, так что телефон нормальный.</p>
               <span class="review__date">20 сентября 2019</span>
             </li>
-            <li class="review uk-flex uk-margin-small-bottom">
+            <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
               <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
-              <div class="uk-flex uk-flex-column">
-                <span class="review__name">Женя</span>
-                <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
-                  знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
-                  телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                  жалуется, так что телефон нормальный.</p>
-                <span class="review__date">20 сентября 2019</span>
-              </div>
+              <span class="review__name">Женя</span>
+              <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
+                знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
+                телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
+                жалуется, так что телефон нормальный.</p>
+              <span class="review__date">20 сентября 2019</span>
             </li>
-            <li class="review uk-flex uk-margin-small-bottom">
+            <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
               <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
-              <div class="uk-flex uk-flex-column">
-                <span class="review__name">Женя</span>
-                <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
-                  знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
-                  телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                  жалуется, так что телефон нормальный.</p>
-                <span class="review__date">20 сентября 2019</span>
-              </div>
+              <span class="review__name">Женя</span>
+              <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
+                знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
+                телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
+                жалуется, так что телефон нормальный.</p>
+              <span class="review__date">20 сентября 2019</span>
             </li>
-            <li class="review uk-flex">
+            <li class="review uk-flex uk-flex-column">
               <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
-              <div class="uk-flex uk-flex-column">
-                <span class="review__name">Женя</span>
-                <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
-                  знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
-                  телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                  жалуется, так что телефон нормальный.</p>
-                <span class="review__date">20 сентября 2019</span>
-              </div>
+              <span class="review__name">Женя</span>
+              <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
+                знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
+                телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
+                жалуется, так что телефон нормальный.</p>
+              <span class="review__date">20 сентября 2019</span>
             </li>
           </ul>
           //= components/pagination.html
