feature: adds articles page

--- a/src/article.html
+++ b/src/article.html
@@ -44,7 +44,7 @@
         </div>
         <!-- right-section -->
         <div class="uk-width-1-4@l uk-flex uk-flex-column">
-          <ul class="article__list">
+          <ul class="article-list">
             <li>
               <a href="#">
                 <p>Специальные цены на предзаказ iPhone 11 и iPhone 11 Pro</p>
