feature: adds sort

--- a/src/articles.html
+++ b/src/articles.html
@@ -11,9 +11,19 @@
           <li class="uk-active"><a href="#">Акции и новости</a></li>
           </li>
         </ul>
-        <div class="uk-flex uk-flex-between uk-child-width-1-2@l uk-flex-column@s">
+        <div class="uk-flex uk-flex-between uk-flex-middle@l uk-flex-column@s">
           <h1 class="title title--medium uk-margin-bottom@s">Акции и новости</h1>
-
+          <ul class="articles__sort uk-flex">
+            <li class="active">
+              <a href="#">Все</a>
+            </li>
+            <li>
+              <a href="#">Новости</a>
+            </li>
+            <li>
+              <a href="#">Акции</a>
+            </li>
+          </ul>
         </div>
       </div>
       <div class="articles__content uk-flex uk-flex-column@s">
@@ -21,7 +31,7 @@
         <div class="uk-width-expand@l uk-margin-right">
           <ul class="articles__list uk-flex uk-flex-column">
             <li class="uk-flex uk-flex-middle uk-flex-column@s">
-              <a href="#">
+              <a class="uk-margin-medium-right@l" href="#">
                 <img src="img/temp/article.jpg" alt="">
               </a>
               <div class="uk-flex uk-flex-column">
@@ -33,7 +43,7 @@
               </div>
             </li>
             <li class="uk-flex uk-flex-middle uk-flex-column@s">
-              <a href="#">
+              <a class="uk-margin-medium-right@l" href="#">
                 <img src="img/temp/article.jpg" alt="">
               </a>
               <div class="uk-flex uk-flex-column">
@@ -45,7 +55,7 @@
               </div>
             </li>
             <li class="uk-flex uk-flex-middle uk-flex-column@s">
-              <a href="#">
+              <a class="uk-margin-medium-right@l" href="#">
                 <img src="img/temp/article.jpg" alt="">
               </a>
               <div class="uk-flex uk-flex-column">
@@ -57,7 +67,7 @@
               </div>
             </li>
             <li class="uk-flex uk-flex-middle uk-flex-column@s">
-              <a href="#">
+              <a class="uk-margin-medium-right@l" href="#">
                 <img src="img/temp/article.jpg" alt="">
               </a>
               <div class="uk-flex uk-flex-column">
