feature: adds feature page

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -1,7 +1,8 @@
 //= components/head.html
 
 <body class="contacts">
-  <div class="contacts__wrapper uk-container bg-full-width">
+    <!-- //= components/header.html -->
+  <div class="contacts__wrapper uk-container bg-full-width--gradient">
     <div class="frame">
       <ul class="breadcrumbs uk-subnav uk-subnav-divider">
         <li><a href="#">Главная</a></li>
