--- a/src/return-policy.html
+++ b/src/return-policy.html
@@ -1,7 +1,8 @@
 //= components/head.html
 
 <body class="return-policy">
-	<div class="return-policy__wrapper uk-container bg-full-width">
+		<!-- //= components/header.html -->
+	<div class="return-policy__wrapper uk-container bg-full-width--gradient">
 		<div class="frame">
 			<div class="uk-width-1-2@l">
 				<ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-medium-bottom">
