--- a/src/reviews.html
+++ b/src/reviews.html
@@ -1,7 +1,8 @@
 //= components/head.html
 
 <body class="reviews">
-  <div class="reviews__wrapper uk-container bg-full-width">
+  <!-- //= components/header.html -->
+  <div class="reviews__wrapper uk-container bg-full-width--gradient">
     <div class="frame">
       <div class="reviews__header uk-flex uk-flex-between uk-flex-wrap">
         <div class="uk-flex uk-flex-column uk-margin-medium-right uk-margin-bottom@s">
