feature: adds accordion

--- a/src/delivery.html
+++ b/src/delivery.html
@@ -2,7 +2,7 @@
 
 <body class="delivery">
   <!-- //= components/header.html -->
-  <div class="delivery__wrapper uk-container bg-full-width--gradient">
+  <div class="delivery__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <div class="frame">
 
 
@@ -97,7 +97,7 @@
       </div>
     </div>
   </div>
-
+  //= components/accordion.html
   //= components/question.html
   //= components/footer.html
 </body>
