feature: adds mobile version

--- a/src/return.html
+++ b/src/return.html
@@ -29,52 +29,57 @@
               </select>
             </div>
 
-            <div class="return__inner-frame uk-flex uk-margin-bottom">
-              <div class="feature feature--blue uk-margin-medium-right">
-                <div>
-                  <svg width="48" height="48" fill="#ffffff">
-                    <use xlink:href="img/symbol/sprite.svg#feature-check-icon" />
-                  </svg>
+            <div class="return__inner-frame uk-flex uk-flex-column uk-margin-bottom">
+              <div class="uk-flex uk-flex-column@s uk-margin-bottom">
+                <div class="feature feature--blue uk-margin-medium-right@l uk-margin-bottom@s">
+                  <div>
+                    <svg width="48" height="48" fill="#ffffff">
+                      <use xlink:href="img/symbol/sprite.svg#feature-check-icon" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="uk-flex uk-flex-column uk-padding-small-top@l">
+                  <span class="return__subtitle uk-margin-small-bottom">Наложенный платеж</span>
+                  <span class="return__text-gray">Ожидаемая датат доставки:</span>
+                  <span class="uk-margin-bottom@s">Вторник, 15 октября 2019</span>
+                </div>
+                <div class="uk-flex uk-flex-column uk-flex-end@l uk-text-right@l position-right@l">
+                  <span class="return__text-green uk-margin-small-bottom">Бесплатно</span>
+                  <span class="return__text-gray">Бесплатно на сумму <br>от 1500 рублей</span>
                 </div>
               </div>
-              <div class="uk-flex uk-flex-column">
-                <span class="return__subtitle uk-margin-small-bottom">Наложенный платеж</span>
-                <span class="return__text-gray">Ожидаемая датат доставки:</span>
-                <span class="uk-margin-bottom">Вторник, 15 октября 2019</span>
+
+              <div class="return__inner-bottom uk-flex-center uk-width-3-5@l">
                 <p class="return__text-border uk-padding-top@l uk-padding-top@s uk-margin-bottom">Наложенный платеж —
-                  это получение посылки на почте после ее оплаты. При этом вы можете полностью осмотреть устройство
+                  это получение посылки на почте после ее оплаты. <br>При этом вы можете полностью осмотреть устройство
                   перед оплатой.</p>
                 <a href="#">Подробнее</a>
               </div>
-
-              <div class="uk-text-right">
-                <span class="return__text-green uk-margin-bottom">Бесплатно</span>
-                <span class="return__text-gray">Бесплатно на сумму <br>от 1500 рублей </span>
-              </div>
             </div>
 
-            <div class="return__inner-frame uk-flex uk-margin-large-bottom">
-              <div class="return__feature uk-margin-medium-right">
-                <div>
-                  <img src="img/pic/logo/cdek-logo.jpg" width="48" height="48" alt="">
+            <div class="return__inner-frame uk-flex uk-flex-column uk-margin-bottom">
+              <div class="uk-flex uk-flex-column@s uk-margin-bottom">
+                <div class="return__feature uk-margin-medium-right@l uk-margin-bottom@s">
+                  <div>
+                    <img src="img/pic/logo/cdek-logo.jpg" width="48" height="48" alt="">
+                  </div>
+                </div>
+                <div class="uk-flex uk-flex-column uk-padding-small-top@l">
+                  <span class="return__subtitle uk-margin-small-bottom">Доставка компанией CDEK</span>
+                  <span class="return__text-gray">Ожидаемая датат доставки:</span>
+                  <span class="uk-margin-bottom@s">Среда, 6 октября 2019</span>
+                </div>
+                <div class="uk-flex uk-flex-column uk-flex-end@l uk-text-right@l position-right@l">
+                  <span class="return__text-green uk-margin-small-bottom">Бесплатно</span>
+                  <span class="return__text-gray">Бесплатно на сумму <br>от 1000 рублей</span>
                 </div>
               </div>
-              <div class="uk-flex uk-flex-column">
-                <span class="return__subtitle uk-margin-small-bottom">Доставка компанией CDEK</span>
-                <span class="return__text-gray">Ожидаемая датат доставки:</span>
-                <span class="uk-margin-bottom">Среда, 6 октября 2019</span>
-                <p class="return__text-border return__text-pink uk-padding-top@l uk-padding-top@s uk-margin-bottom">
-                  Наложенный платеж —
-                  это получение посылки на почте после ее оплаты. При этом вы можете полностью осмотреть устройство
-                  перед оплатой.</p>
-                <p class="return__text-border uk-padding-top@l uk-padding-top@s uk-margin-bottom">Наложенный платеж —
-                  это получение посылки на почте после ее оплаты. При этом вы можете полностью осмотреть устройство
-                  перед оплатой.</p>
-              </div>
 
-              <div class="uk-text-right">
-                <span class="return__text-green uk-margin-bottom">Бесплатно</span>
-                <span class="return__text-gray">Бесплатно на сумму <br>от 1000 рублей</span>
+              <div class="return__inner-bottom uk-flex-center uk-width-3-5@l">
+                <p class="return__text-border return__text-pink uk-padding-top@l uk-padding-top@s uk-margin-bottom">
+                  Быстрая доставка по России за 3-4 рабочих дней <br>до двери вашего дома или почтового отделения.</p>
+                <p class="return__text-border uk-padding-top@l uk-padding-top@s uk-margin-bottom">Примечание: данный
+                  способ оплаты доступен только по полной предоплате товара</p>
               </div>
             </div>
 
@@ -106,7 +111,7 @@
                   получении
                   заказа</p>
               </li>
-              <li class="feature--pink uk-flex uk-flex-column uk-flex-middle">
+              <li class="feature--pink uk-flex uk-flex-column uk-flex-middle uk-margin-medium-bottom@s uk-padding-medium-bottom@s">
                 <div class="uk-margin-bottom">
                   <svg width="48" height="48">
                     <use xlink:href="img/symbol/sprite.svg#feature-cashless-icon" />
@@ -133,27 +138,30 @@
             <h2 class="uk-text-center uk-margin-bottom">Обмен и возврат в
               течении 14 дней <br>с момента покупки.</h2>
 
-            <div class="return__inner-frame uk-flex uk-margin-large-bottom">
-              <div class="return__feature uk-margin-medium-right">
-                <div>
-                  <img src="img/pic/logo/cdek-logo.jpg" width="48" height="48" alt="">
+            <div class="return__inner-frame uk-flex uk-flex-column uk-margin-bottom">
+              <div class="uk-flex uk-flex-column@s uk-margin-bottom">
+                <div class="return__feature uk-margin-medium-right@l uk-margin-bottom@s">
+                  <div>
+                    <img src="img/pic/logo/cdek-logo.jpg" width="48" height="48" alt="">
+                  </div>
+                </div>
+                <div class="uk-flex uk-flex-column uk-padding-small-top@l">
+                  <span class="return__subtitle uk-margin-small-bottom">Местное почтовое отделение</span>
+                  <span class="return__text-gray">Ожидаемая датат доставки:</span>
+                  <span class="uk-margin-bottom@s">Среда, 6 октября 2019</span>
+                </div>
+                <div class="uk-flex uk-flex-column uk-flex-end@l uk-text-right@l position-right@l">
+                  <span class="return__text-gray">Оплату почтового отправлеия <br>при обмене или возврате <br>производит
+                    покупатель</span>
                 </div>
               </div>
-              <div class="uk-flex uk-flex-column">
-                <span class="return__subtitle uk-margin-small-bottom">Местное почтовое отделение</span>
-                <span class="return__text-gray">Ожидаемая датат доставки:</span>
-                <span class="uk-margin-bottom">Среда, 6 октября 2019</span>
-                <p class="return__text-border return__text-pink uk-padding-top@l uk-padding-top@s uk-margin-bottom">Вы
-                  можете вернуть заказ через любое почтовое отделение</p>
-                <p class="return__text-border uk-padding-top@l uk-padding-top@s uk-margin-bottom">К каждому товару
-                  прилагается накладная и гарантийный талон. Держите их в
-                  сохранности.</p>
-                <a href="#">Подробнее</a>
-              </div>
 
-              <div class="uk-text-right uk-width-1-4">
-                <span class="return__text-gray">Оплату почтового отправлеия <br>при обмене или возврате <br>производит
-                  покупатель </span>
+              <div class="return__inner-bottom uk-flex-center uk-width-3-5@l">
+                <p class="return__text-border return__text-pink uk-padding-top@l uk-padding-top@s uk-margin-bottom">
+                  Вы можете вернуть заказ через любое почтовое отделение</p>
+                <p class="return__text-border uk-padding-top@l uk-padding-top@s uk-margin-bottom">К каждому товару
+                  прилагается накладная и гарантийный талон. Держите <br>их в сохранности.</p>
+                <a href="#">Подробнее</a>
               </div>
             </div>
           </li>
