feature: adds styles

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -3,7 +3,7 @@
 <body class="catalog">
   <!-- //= components/header.html -->
   <div class="catalog__header uk-container bg-full-width--gradient">
-    <div class="catalog__header-top uk-margin-bottom">
+    <div class="catalog__header-top uk-margin-bottom@l">
       <ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-bottom">
         <li><a href="#">Главная</a></li>
         <li class="uk-active"><a href="#">Сматрфоны iPhone</a></li>
@@ -11,11 +11,63 @@
       <h1 class="title title--medium uk-margin-bottom@l">Смартфоны iPhone</h1>
     </div>
 
-    <div class="catalog__header-bottom uk-flex uk-flex-column@s uk-padding-bottom@l uk-padding-bottom@s">
-      <div class="uk-width-expand"></div>
-      <div class="uk-flex">
+    <div class="catalog__header-bottom uk-flex uk-flex-column-reverse@s uk-padding-bottom@l uk-padding-bottom@s">
+
+      <div class="catalog__swiper uk-width-expand uk-margin-right@l uk-margin-top@s">
+
+        <ul class="swiper-wrapper">
+          <li class="swiper-slide">
+            <a href="#">iPhone 11 Pro MAX</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone 11 Pro</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone 11</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone XS Max</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone XS</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone XR</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone X</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone 8 Plus</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone 8</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone 7 Plus</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone 7</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone 6S Plus</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone 6S</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone SE</a>
+          </li>
+          <li class="swiper-slide">
+            <a href="#">iPhone 6 Plus</a>
+          </li>
+        </ul>
+
+      </div>
+
+      <div class="catalog__settings uk-flex uk-flex-top uk-margin-small-top@l uk-padding-left@s uk-padding-right@s">
         <div class="catalog__sort uk-flex uk-flex-column@s uk-flex-middle@l uk-margin-small-right@s">
-          <label class="uk-margin-right@l uk-margin-small-bottom@s">Сортировать</label>
+          <label class="uk-margin-small-right@l uk-margin-small-bottom@s">Сортировать</label>
           <select>
             <option data-display="Санкт-Петербург">Популярные</option>
             <option value="1">По рейтингу</option>
