--- a/src/account-main.html
+++ b/src/account-main.html
@@ -100,24 +100,78 @@
         </div>
       </div>
 
-      <div class="account__profile-wrap uk-width-1-3@l">
-        <div class="uk-flex uk-flex-between">
-          <span>Профиль</span>
-          <a href="#">Изменить профиль</a>
+      <div class="profile__wrap uk-width-1-3@l">
+        <div class="uk-flex uk-flex-between uk-flex-middle">
+          <span class="profile__title">Профиль</span>
+          <button class="profile__edit" type="button">Изменить
+            профиль</button>
         </div>
-        <ul class="account__profile" uk-accordion>
+        <ul class="profile" uk-accordion>
           <li class="uk-open">
             <a class="uk-accordion-title" href="#">
-              <div class="uk-flex">
-                <img class="account__profile-logo" src="img/temp/profile-logo.jpg" width="80" height="80" alt="">
+              <div class="uk-flex uk-flex-middle">
+                <img class="profile__logo uk-margin-right" src="img/temp/profile-logo.jpg" width="80" height="80"
+                  alt="">
                 <div class="uk-flex uk-flex-column">
-                  <span>Василий Иванов</span>
-                  <span>Санкт-Петербург</span>
+                  <span class="profile__name">Василий Иванов</span>
+                  <span class="profile__region">Санкт-Петербург</span>
                 </div>
               </div>
             </a>
             <div class="uk-accordion-content">
 
+              <div class="profile__balance uk-flex uk-flex-between uk-flex-middle">
+                <div class="uk-flex uk-flex-column">
+                  <label class="profile__subtitle">Баланс</label>
+                  <span>5065 балов</span>
+                </div>
+                <button type="button">Вывести в &#8381; на карту</button>
+              </div>
+
+              <ul class="profile__data">
+                <li class="profile__field uk-flex uk-flex-between uk-flex-middle">
+                  <span class="profile__subtitle">Телефон:</span>
+                  <span>+7 098 7654321</span>
+                </li>
+                <li class="profile__field uk-flex uk-flex-between uk-flex-middle">
+                  <span class="profile__subtitle">Email:</span>
+                  <span>vasiliy-ivanov@mail.com</span>
+                </li>
+                <li class="profile__field uk-flex uk-flex-between uk-flex-middle">
+                  <span class="profile__subtitle">Адрес:</span>
+                  <span>ул. Пушкина 12б кв 261</span>
+                </li>
+                <li class="profile__field uk-flex uk-flex-between uk-flex-middle">
+                  <span class="profile__subtitle">Индекс:</span>
+                  <span>908800</span>
+                </li>
+              </ul>
+
+              <div class="profile__offers">
+                <span class="profile__subtitle">Получать новости и спец. предложения</span>
+                <ul class="filter__checkbox">
+                  <li>
+                    <input class="uk-hidden" type="checkbox" id="f1" name="f1" checked="">
+                    <label for="f1">На Email</label>
+                  </li>
+                  <li>
+                    <input class="uk-hidden" type="checkbox" id="f2" name="f2">
+                    <label for="f2">В месседжеры</label>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="profile__referral">
+                <span class="profile__subtitle">Реферальная ссылка</span>
+
+                <div class="profile__referral-link uk-flex uk-flex-between uk-flex-middle"
+                  onclick="$('.profile__referral-text').select().focus(); document.execCommand('copy'); $('.profile__referral-copy').text('Ссылка скопирована')">
+                  <input class="profile__referral-text" type="text" value="https://ist.r/QWERTY" readonly>
+                  <span class="profile__referral-copy">Скопировать</span>
+                </div>
+
+                <p>Когда приглашенный сделает первую покупку по вашей ссылке, вы поулчите 100 балов на счет</p>
+              </div>
 
             </div>
           </li>
